# SLucAM

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear_results.sh  extract_superpoint.sh
data/datasets/fr1_desk/: SLucAM_results_lf_net.txt  SLucAM_results_orb.txt  SLucAM_results_superpoint.txt
data/datasets/fr1_teddy/: camera_parameters.txt
data/datasets/fr1_xyz/: SLucAM_results_lf_net.txt  SLucAM_results_orb.txt  SLucAM_results_superpoint.txt
data/datasets/fr2_desk/: SLucAM_results_lf_net.txt  SLucAM_results_orb.txt  SLucAM_results_superpoint.txt  camera_parameters.txt
data/datasets/fr2_xyz/: SLucAM_results_lf_net.txt  SLucAM_results_orb.txt  SLucAM_results_superpoint.txt  rgb.txt
data/datasets/fr3_nostructure_texture_near/: SLucAM_results_lf_net.txt  SLucAM_results_orb.txt  SLucAM_results_superpoint.txt  camera_parameters.txt
data/datasets/fr3_structure_texture_far/: SLucAM_results_lf_net.txt  SLucAM_results_orb.txt  (+2 more)
evaluation/: evaluate_ate.py  evaluate_fr1_desk.sh  evaluate_fr1_xyz.sh  evaluate_fr2_desk.sh  evaluate_fr2_xyz.sh  evaluate_fr3_nostructure_texture_near.sh  evaluate_fr3_structure_texture_far.sh  evaluate_fr3_structure_texture_near.sh
include/: SLucAM_dataset.h  SLucAM_geometry.h  SLucAM_image.h  SLucAM_initialization.h  SLucAM_keyframe.h  SLucAM_keypoint.h  SLucAM_matcher.h  SLucAM_measurement.h  SLucAM_state.h  SLucAM_visualization.h
plots/: generate_video.sh  load_edges.m  load_image_points.m  load_img_filename.m  load_landmarks.m  load_poses.m  main.m  plot_edges.m  plot_image.m  plot_keyframe.m  plot_pose_graph.m  plot_poses.m  test.m
src/: CMakeLists.txt  SLucAM_dataset.cpp  SLucAM_geometry.cpp  SLucAM_image.cpp  SLucAM_initialization.cpp  SLucAM_keyframe.cpp  SLucAM_keypoint.cpp  SLucAM_matcher.cpp  SLucAM_measurement.cpp  SLucAM_state.cpp  SLucAM_visualization.cpp  main.cpp
(+5 files in other folders)
